v_0.3.10: Fix no label, scrollbar

--- a/src/modules/Finances/component/CostsByLabel/CostsByLabel.module.scss
+++ b/src/modules/Finances/component/CostsByLabel/CostsByLabel.module.scss
@@ -9,6 +9,9 @@
 .item {
   @include item();
   grid-template-columns: 1fr 180px 100px 35px;
+  &:first-child {
+    z-index: 1000;
+  }
 }
 
 .buttons {
@@ -18,6 +21,10 @@
 }
 
 .costsByLabel {
+  height: calc(100% - 48px);
+  .table {
+    max-height: calc(100% - 47px);
+  }
   input {
     border: none;
     padding: 0;
