--- a/src/modules/Finances/component/FinancicalMonths/FinancicalMonths.module.scss
+++ b/src/modules/Finances/component/FinancicalMonths/FinancicalMonths.module.scss
@@ -1,7 +1,14 @@
+.financicalMonths {
+  height: 100%;
+}
+
 .cards {
   display: flex;
   gap: 14px;
   flex-wrap: wrap;
+  overflow: auto;
+  max-height: calc(100% - 100px);
+  height: auto;
 
   .card {
     position: relative;
